--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 							<h2><span>Machine Learning Researcher / Data Scientist</span></h2>
 							<p>
 								<ul class="fh5co-social-icons">
+									<li><a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing"><i class="icon-document"></i></a></li>
 									<li><a href="https://github.com/s6007541"><i class="icon-github2"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://www.facebook.com/sorn.chottananurak/"><i class="icon-facebook2"></i></a></li>
@@ -88,6 +89,7 @@
 					<p>I am a fourth-year undergraduate student double majoring in Electrical Engineering and Computer Science at the Korea Advanced Institute of Science & Technology (KAIST). I have a keen interest in machine learning, domain adaptation, computer vision, and other computer science topics.</p>
 					<p>I am actively involved as a researcher, contributing to the development of state-of-the-art technology within the field of machine learning.</p>
 					<p>Eager to further expand my horizons, I am currently exploring exciting opportunities that align with my passion and skills.</p>
+					<p>Check out my <a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing">Resume!</a></p>
 					
 					<p>
 						<ul class="fh5co-social-icons">
