update paper AETTA

--- a/index.html
+++ b/index.html
@@ -322,6 +322,16 @@
 			<table class="table_publication">
 				<tbody>
 				  <tr>
+					<td class="cell_publication">
+						<p style="white-space: pre-line"><b style="font-size: 26px">AETTA: Label-Free Accuracy Estimation for Test-Time Adaptation</b>
+							Taeckyung Lee, <u>Sorn Chottananurak</u>, Taesik Gong, Sung-Ju Lee.
+							<i>In Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR),</i> 2024
+							Acceptance Rate: 25.8%.
+						</p>
+						
+					</td>
+				  </tr>
+				  <tr>
 					<!-- <th scope="row">1</th> -->
 					<td class="cell_publication">
 						<p style="white-space: pre-line"><b style="font-size: 22px">SoTTA: Robust Test-Time Adaptation on Noisy Data Streams</b>
