--- a/index.html
+++ b/index.html
@@ -326,7 +326,8 @@
 						<p style="white-space: pre-line"><b style="font-size: 26px">AETTA: Label-Free Accuracy Estimation for Test-Time Adaptation</b>
 							Taeckyung Lee, <u>Sorn Chottananurak</u>, Taesik Gong, Sung-Ju Lee.
 							<i>In Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR),</i> 2024
-							Acceptance Rate: 25.8%.
+							Acceptance Rate: 23.6%.
+							<a href="https://arxiv.org/abs/2404.01351">[Paper]</a> <a href="https://nmsl.kaist.ac.kr/projects/aetta/">[Website]</a> <a href="https://github.com/taeckyung/AETTA">[Code]</a>
 						</p>
 						
 					</td>
