--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<li><a href="#fh5co-work">III. Academic Projects</a></li>
 						<li><a href="#fh5co-publication">IV. Publications</a></li>
 						<li><a href="#fh5co-awards">V. Awards</a></li>
-						<li><a href="#fh5co-started">VI. Contact Me</a></li>
+						<li><a href="#fh5co-contact">VI. Contact Me</a></li>
 					</ul>
 				</div>
 			</div>
@@ -199,13 +199,13 @@
 									<span>Double Major: Computer Science & Electrical Engineering</span>
 								</div>
 								<span class="company">
-									<span style="white-space: pre-line">KAIST (<a href="https://engineering.kaist.ac.kr/">KAIST</a>)
-									2020 - Current
+									<span style="white-space: pre-line">Korea Advanced Institute of Science & Technology (<a href="https://engineering.kaist.ac.kr/">KAIST</a>)
+									2020 - 2024
 									</span>
 								</span>
 								</div>
 								<div class="timeline-body">
-								<p>Overall GPA: 4.12/4.30 (Percentile: 98.2%)</p>
+								<p>Overall GPA: 4.13/4.30 (Percentile: 98.3%)</p>
 								</div>
 							</div>
 							</div>
@@ -234,6 +234,29 @@
 							</div>
 							</div>
 						</li>
+
+						<!-- Pre-Secondary Education Education -->
+						<li class="timeline-inverted">
+							<div class="timeline-panel">
+							<div class="timeline-image">
+								<img src="images/kus.jpg" alt="Pre-Secondary Education" class="img-responsive">
+							</div>
+							<div class="timeline-text">
+								<div class="timeline-heading">
+								<h3 class="timeline-title"><i class="icon-graduation-cap"> </i> Pre-Secondary Education</h3>
+								<span class="company">
+									<span style="white-space: pre-line">Kasetsart University Laboratory School,
+										Center for Educational Research and Development (<a href="https://en.wikipedia.org/wiki/Kasetsart_University_Laboratory_School">KUS</a>)
+									2009 - 2017
+
+
+									</span>
+								</span>
+								</div>
+							</div>
+							</div>
+						</li>
+
 					</ul>
 				</div>
 			</div>
@@ -333,6 +356,7 @@
 					  <a href="https://arxiv.org/abs/2404.01351">[Paper]</a>
 					  <a href="https://nmsl.kaist.ac.kr/projects/aetta/">[Website]</a>
 					  <a href="https://github.com/taeckyung/AETTA">[Code]</a>
+					  <a href="https://www.youtube.com/watch?v=qZJ_0-rxMs0">[Video]</a>
 					</div>
 					<div class="publication-image">
 					  <img src="images/aetta.png" alt="Publication Image">
@@ -353,6 +377,7 @@
 					  <a href="https://arxiv.org/abs/2310.10074">[Paper]</a>
 					  <a href="https://nmsl.kaist.ac.kr/projects/sotta/">[Website]</a>
 					  <a href="https://github.com/taeckyung/SoTTA">[Code]</a>
+					  <a href="https://neurips.cc/virtual/2023/poster/72892">[Video/Poster]</a>
 					</div>
 					<div class="publication-image">
 					  <img src="images/SoTTA.png" alt="Publication Image">
@@ -450,7 +475,7 @@
 	<script src="js/google_map.js"></script>
 	
 	<!-- Main -->
-	<script src="js/main.js"></script> -->
+	<script src="js/main.js"></script>
 
 	</body>
 </html>
