--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
 
 	  <div id="fh5co-resume" class="fh5co-bg-color">
 		<div class="container">
+			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+				<h2>Experience</h2>
+			</div>
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
@@ -247,7 +250,7 @@
 								<span class="company">
 									<span style="white-space: pre-line">Kasetsart University Laboratory School,
 										Center for Educational Research and Development (<a href="https://en.wikipedia.org/wiki/Kasetsart_University_Laboratory_School">KUS</a>)
-									2009 - 2017
+									2008 - 2017
 
 
 									</span>
