improve academic projects interfaces

--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
 									<div class="timeline-body">
 										<p>
 											I have thoroughly enjoyed engaging in high-quality research across various fields of study, namely, <b>Machine Learning</b>, <b>Mobile Systems</b>, and <b>Human-Computer Interaction</b>.
+											<br/>
+										<!-- </p>
+										<p> -->
+											Here are some of my research projects : <a href="https://nmsl.kaist.ac.kr/projects/aetta/">AETTA</a>, <a href="https://nmsl.kaist.ac.kr/projects/sotta/">SoTTA</a>, <a href="https://nmsl.kaist.ac.kr/projects/attention/">Attention</a>
 										</p>
 									</div>
 								</div>
@@ -282,6 +286,11 @@
 						<div class="desc">
 							<h3>AdaDQN</h3>
 							<p class="project-description">Adaptive Deep Q-Learning: Enhancing Performance of Deep Q-Networks in the Face of Covariate Shift</p>
+							<div class="keywords">
+								<span class="keyword-btn">Reinforcement Learning</span>
+								<span class="keyword-btn">Domain Adaptation</span>
+								<span class="keyword-btn">Atari Game</span>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -291,6 +300,12 @@
 						<div class="desc">
 							<h3>EvolveUniTest</h3>
 							<p class="project-description">Evolving Prompt with Genetic Algorithm Yields Powerful Instruction for Unit Test Generation</p>
+							<div class="keywords">
+								<span class="keyword-btn">Unit Testing</span>
+								<span class="keyword-btn">Prompt Engineering</span>
+								<span class="keyword-btn">Evolutionary Algorithms</span>
+								<span class="keyword-btn">LLM</span>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -300,6 +315,12 @@
 						<div class="desc">
 							<h3>PSKD-ML</h3>
 							<p class="project-description">Progressive Self-Knowledge Distillation with Mutual Learning</p>
+							<div class="keywords">
+								<span class="keyword-btn">Knowledge Distillation</span>
+								<span class="keyword-btn">Mutual Learning</span>
+								<span class="keyword-btn">Model Compression</span>
+								<span class="keyword-btn">Machine Learning</span>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -310,7 +331,14 @@
 					<a href="https://github.com/s6007541/OECT" class="work project-box" style="background-image: url(images/OECT.png);">
 						<div class="desc">
 							<h3>OECT</h3>
-							<p class="project-description">Online Efficient Convolutional Transformers for Vision Tasks</p>
+							<p class="project-description">Optimized-Embedded Cluster & Tune: Boost Cold Start Performance in Text Classification</p>
+							<div class="keywords">
+								<span class="keyword-btn">LLM</span>
+								<span class="keyword-btn">Text Classification</span>
+								<span class="keyword-btn">Cold Start</span>
+								<span class="keyword-btn">Clustering</span>
+								<span class="keyword-btn">Unsupervised Learning</span>
+							</div>
 						</div>
 					</a>
 				</div>
@@ -319,19 +347,17 @@
 					<a href="https://github.com/s6007541/OceanSpace" class="work project-box" style="background-image: url(images/oceanspace.png);">
 						<div class="desc">
 							<h3>OceanSpace</h3>
-							<p class="project-description">Your Digital Sanctuary for Stress Relief</p>
+							<p class="project-description">LLM-based Personalized Digital Sanctuary for Stress Relief</p>
+							<div class="keywords">
+								<span class="keyword-btn">LLM</span>
+								<span class="keyword-btn">Chatbot</span>
+								<span class="keyword-btn">Personalization</span>
+								<span class="keyword-btn">Mental Health</span>
+								<span class="keyword-btn">AI Sanctuary</span>
+							</div>
 						</div>
 					</a>
 				</div>
-				<!-- Project 6 -->
-				<!-- <div class="col-md-4 text-center col-padding">
-					<a href="https://github.com/s6007541/DLGAN" class="work project-box" style="background-image: url(images/DLGAN.png);">
-						<div class="desc">
-							<h3>DLGAN</h3>
-							<p class="project-description">Deep Learning with Generative Adversarial Networks for Data Augmentation</p>
-						</div>
-					</a>
-				</div> -->
 			</div>
 		</div>
 	</div>
@@ -411,7 +437,7 @@
 			<div class="award-item">
 			  <h3>Grand-Prix in Undergraduate Research Participation (URP) Program</h3>
 			  <span class="award-date">Winter-Spring, 2024</span>
-			  <p>The best project among all presented URP projects.</p>
+			  <p>The best project (1st-place) among all presented URP projects.</p>
 			</div>
 	  
 			<div class="award-item">
