--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
@@ -184,7 +185,7 @@
 									</div>
 									<div class="timeline-body">
 										<p>
-											Led the "Risk-Based Pricing and Cut-off Optimization" project within the Credit Risk Team, creating a CVXPY-based optimization solution.
+											I led the <b>'Risk-Based Pricing and Cut-off Optimization'</b> project in the Credit Risk Team. I developed an optimization solution using <b>CVXPY and reinforcement learning</b>, along with a novel <b>multiplier grading system</b>. This approach was mathematically shown to maximize Risk-Adjusted Return on Capital (RAROC), enhancing pricing and decision-making processes.
 										</p>
 									</div>
 								</div>
@@ -453,7 +454,7 @@
 			</div>
 	  
 			<div class="award-item">
-			  <h3>Undergraduate Research Participation (URP) Program</h3>
+			  <h3>Oral Presentation in Undergraduate Research Participation (URP) Program</h3>
 			  <span class="award-date">Winter-Spring, 2024</span>
 			  <p>Top-selected undergraduate students at KAIST to engage in active research activities.</p>
 			</div>
