update mobile version

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 							<div><h3 class="education">Education</h3></div>
 						</li>
 						<li class="timeline-unverted">
-							<div class="timeline-panel">
+							<div class="timeline-panel-ed">
 							<div class="timeline-image">
 								<img src="images/kaist.png" alt="Education" class="img-responsive">
 							</div>
@@ -213,14 +213,17 @@
 								</span>
 								</div>
 								<div class="timeline-body">
-								<p>Overall GPA: 4.13/4.30 (Percentile: 98.3%)</p>
+									<p>
+										Overall GPA: 4.13/4.30 (Percentile: 98.3%) 
+										&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+									</p> 
 								</div>
 							</div>
 							</div>
 						</li>
 						<!-- High School Education -->
 						<li class="timeline-inverted">
-							<div class="timeline-panel">
+							<div class="timeline-panel-ed">
 							<div class="timeline-image">
 								<img src="images/mwit.jpeg" alt="High School" class="img-responsive">
 							</div>
@@ -237,7 +240,13 @@
 								</span>
 								</div>
 								<div class="timeline-body">
-								<p>Overall GPA: 3.98/4.00</p>
+								<p>
+									Overall GPA: 3.98/4.00
+									&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+									&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+
+
+								</p>
 								</div>
 							</div>
 							</div>
@@ -245,7 +254,7 @@
 
 						<!-- Pre-Secondary Education Education -->
 						<li class="timeline-inverted">
-							<div class="timeline-panel">
+							<div class="timeline-panel-ed">
 							<div class="timeline-image">
 								<img src="images/kus.jpg" alt="Pre-Secondary Education" class="img-responsive">
 							</div>
@@ -255,11 +264,14 @@
 								<span class="company">
 									<span style="white-space: pre-line">Kasetsart University Laboratory School,
 										Center for Educational Research and Development (<a href="https://en.wikipedia.org/wiki/Kasetsart_University_Laboratory_School">KUS</a>)
-									2008 - 2017
-
-
 									</span>
 								</span>
+								</div>
+								<div class="timeline-body">
+									<p>
+										2008 - 2017 &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+										&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+									</p>
 								</div>
 							</div>
 							</div>
