--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
 				<li><span class="info-label">Full Name:</span><span class="info-value"> Sorn Chottananurak</span></li>
 				<li><span class="info-label">Phone:</span><span class="info-value"> (+66)87-324-9207 / (+82)10-5177-2129</span></li>
 				<li><span class="info-label">Email:</span><span class="info-value"> sorn111930@gmail.com / sorn111930@kaist.ac.kr</span></li>
-				<li><span class="info-label">Address:</span><span class="info-value"> Bangkok, Thailand / Daejeon, Korea</span></li>
+				<li><span class="info-label">Address:</span><span class="info-value"> Bangkok, Thailand</span></li>
+				<li><span class="info-label"> &nbsp; </span><span class="info-value"> </span></li>
+				<li><span class="info-label"> &nbsp; </span><span class="info-value"> </span></li>
+
 			  </ul>
 			</div>
 	  
