--- a/index.html
+++ b/index.html
@@ -333,9 +333,8 @@
 							<p class="project-description">Progressive Self-Knowledge Distillation with Mutual Learning</p>
 							<div class="keywords">
 								<span class="keyword-btn">Knowledge Distillation</span>
-								<span class="keyword-btn">Mutual Learning</span>
 								<span class="keyword-btn">Model Compression</span>
-								<span class="keyword-btn">Machine Learning</span>
+								<span class="keyword-btn">Deep Learning</span>
 							</div>
 						</div>
 					</a>
@@ -352,7 +351,6 @@
 								<span class="keyword-btn">LLM</span>
 								<span class="keyword-btn">Text Classification</span>
 								<span class="keyword-btn">Cold Start</span>
-								<span class="keyword-btn">Clustering</span>
 								<span class="keyword-btn">Unsupervised Learning</span>
 							</div>
 						</div>
