--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			  <h3>Hello There!</h3>
 			  <p>I am a fourth-year undergraduate student double majoring in Electrical Engineering and Computer Science at the Korea Advanced Institute of Science & Technology (KAIST). My research and professional interests span across <strong>machine learning</strong>, <strong>domain adaptation</strong>, <strong>computer vision</strong>, and other computer science topics.</p>
 			  <p>As an active researcher, I am working on innovative projects related to state-of-the-art technology in machine learning. Currently, I am exploring new opportunities that align with my passion and expertise.</p>
-			  <p>Feel free to check out my <a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing">Resume!</a></p>
+			  <p>Feel free to check out my <a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing" style="color:rgb(255, 229, 168)">Resume!</a></p>
 	  
 			  <!-- Social Media Icons -->
 			  <div>
