update news section + navbar

--- a/index.html
+++ b/index.html
@@ -37,7 +37,33 @@
 
 	</head>
 	<body>
-		
+
+    <!-- Navigation Bar -->
+    <div class="navbar">
+        <div class="navbar-content">
+			<!-- Dropdown Button -->
+            <div class="dropdown">
+                <button class="dropdown-btn">Menu</button>
+                <div class="dropdown-content">
+					<a href="#fh5co-about">About Me</a>
+					<a href="#fh5co-resume">Experience</a>
+					<a href="#fh5co-work">Academic Projects</a>
+					<a href="#fh5co-publication">Publications</a>
+					<a href="#fh5co-awards">Awards</a>
+					<a href="#fh5co-contact">Contact Me</a>
+                </div>
+            </div>
+
+            <!-- Your Name in the Center -->
+            <div class="name">Sorn Chottananurak</div>
+			
+			
+			<div class="spacenav">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</div>
+
+            
+        </div>
+    </div>
+
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
@@ -68,24 +94,52 @@
 	</header>
 
 
-	<div id="fh5co-toc" class="fh5co-bg-dark" style="color: white;">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Quick Links</h2>
-				</div>
+	<div id="news" class="fh5co-bg-dark" style="color: white;">
+		<h2>Latest News</h2>
+		<div id="news-inner">
+			<div class="news-item">
+				<p class="date">October 2024</p>
+				<p class="news-text">I was selected for the College of Engineering (CoE) Leadership Award!</p>
 			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<ul class="toc-list">
-						<li><a href="#fh5co-about">I. About Me</a></li>
-						<li><a href="#fh5co-resume">II. Experience</a></li>
-						<li><a href="#fh5co-work">III. Academic Projects</a></li>
-						<li><a href="#fh5co-publication">IV. Publications</a></li>
-						<li><a href="#fh5co-awards">V. Awards</a></li>
-						<li><a href="#fh5co-contact">VI. Contact Me</a></li>
-					</ul>
-				</div>
+			<div class="news-item">
+				<p class="date">October 2024</p>
+				<p class="news-text">I was on the Dean's List for the Spring Semester 2024 with a GPA of 4.16/4.30!</p>
+			</div>
+			<div class="news-item">
+				<p class="date">September 2024</p>
+				<p class="news-text">My project won the Grand Prix (1st place) in the URP workshop!</p>
+			</div>
+			<div class="news-item">
+				<p class="date">July 2024</p>
+				<p class="news-text">My URP project was selected for an oral presentation in the URP workshop!</p>
+			</div>
+			<div class="news-item">
+				<p class="date">June 2024</p>
+				<p class="news-text">Our project, <a href="https://github.com/s6007541/OceanSpace">OceanSpace</a>, was selected as one of the top 6 finalists in the <a href="https://www.scb.co.th/en/about-us/news/may-2024/typhoon-hackathon-2024.html">Typhoon Hackathon 2024</a>, Thailand!</p>
+			</div>
+			<div class="news-item">
+				<p class="date">January 2024</p>
+				<p class="news-text">Our paper, <a href="https://nmsl.kaist.ac.kr/projects/aetta/">AETTA</a>, was accepted to <strong>CVPR 2024!</strong></p>
+			</div>
+			<div class="news-item">
+				<p class="date">December 2023</p>
+				<p class="news-text">I was selected to participate in the URP program!</p>
+			</div>
+			<div class="news-item">
+				<p class="date">September 2023</p>
+				<p class="news-text">Our paper, <a href="https://nmsl.kaist.ac.kr/projects/sotta/">SoTTA</a>, was accepted to <strong>NeurIPS 2023!</strong></p>
+			</div>
+			<div class="news-item">
+				<p class="date">June 2023</p>
+				<p class="news-text">I joined Siam Commercial Bank (<a href="https://www.scb.co.th/en/personal-banking.html">SCB</a>) as a data scientist intern in credit risk team!</p>
+			</div>
+			<div class="news-item">
+				<p class="date">June 2022</p>
+				<p class="news-text">I joined <a href="https://nmsl.kaist.ac.kr/">NMSL</a> as an undergraduate researcher, working on HCI, Mobile Computing, and Machine Learning!</p>
+			</div>
+			<div class="news-item">
+				<p class="date">March 2021</p>
+				<p class="news-text">I was on the Dean's List for the Fall Semester 2020 with a GPA of 4.27/4.30!</p>
 			</div>
 		</div>
 	</div>
@@ -103,20 +157,14 @@
 			  <!-- Insert your photo here -->
 			  <img src="images/Sorn_profile.jpg" alt="Sorn Chottananurak" class="profile-image">
 			  <ul class="info">
-				<li><span class="info-label">Full Name:</span><span class="info-value"> Sorn Chottananurak</span></li>
-				<li><span class="info-label">Phone:</span><span class="info-value"> (+66)87-324-9207 / (+82)10-5177-2129</span></li>
-				<li><span class="info-label">Email:</span><span class="info-value"> sorn111930@gmail.com / sorn111930@kaist.ac.kr</span></li>
-				<li><span class="info-label">Address:</span><span class="info-value"> Bangkok, Thailand</span></li>
-				<li><span class="info-label"> &nbsp; </span><span class="info-value"> </span></li>
-				<li><span class="info-label"> &nbsp; </span><span class="info-value"> </span></li>
-
+				<span class="firstname">Sorn</span><br/><span class="lastname">Chottananurak</span>
 			  </ul>
 			</div>
 	  
 			<!-- Right Section (About Me Description) -->
 			<div class="col-md-8">
 			  <h3>Hello There!</h3>
-			  <p>I am a fourth-year undergraduate student double majoring in Electrical Engineering and Computer Science at the Korea Advanced Institute of Science & Technology (KAIST). My research and professional interests span across <strong>machine learning</strong>, <strong>domain adaptation</strong>, <strong>computer vision</strong>, and other computer science topics.</p>
+			  <p>I am a fourth-year undergraduate student double majoring in Electrical Engineering and Computer Science at the Korea Advanced Institute of Science & Technology (KAIST). My research and professional interests span across <strong>machine learning</strong>, <strong>domain adaptation</strong>, <strong>personalized AI</strong>, and <strong>topics beyond supervised learning (semi-supervised learning, self-supervised learning, and unsupervised learning)</strong>.</p>
 			  <p>As an active researcher, I am working on innovative projects related to state-of-the-art technology in machine learning. Currently, I am exploring new opportunities that align with my passion and expertise.</p>
 			  <p>Feel free to check out my <a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing" style="color:rgb(255, 229, 168)">Resume!</a></p>
 	  
