--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -43,7 +45,7 @@
         <div class="navbar-content">
 			<!-- Dropdown Button -->
             <div class="dropdown">
-                <button class="dropdown-btn">Menu</button>
+                <button class="dropdown-btn"><i class="fas fa-bars"></i></button>
                 <div class="dropdown-content">
 					<a href="#fh5co-about">About Me</a>
 					<a href="#fh5co-resume">Experience</a>
@@ -51,6 +53,7 @@
 					<a href="#fh5co-publication">Publications</a>
 					<a href="#fh5co-awards">Awards</a>
 					<a href="#fh5co-contact">Contact Me</a>
+					<a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing">Resume</a>
                 </div>
             </div>
 
@@ -79,11 +82,13 @@
 							<h2><span>Machine Learning Researcher / Data Scientist</span></h2>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing"><i class="icon-document"></i></a></li>
-									<li><a href="https://github.com/s6007541"><i class="icon-github2"></i></a></li>
+									<li><a href="https://github.com/s6007541"><i class="fab fa-github"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://www.facebook.com/sorn.chottananurak/"><i class="icon-facebook2"></i></a></li>
-									<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
+									<li><a href="mailto: sorn111930@gmail.com"><i class="fas fa-envelope"></i></a></li>	
+									<li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
+									
+					
+
 								</ul>
 							</p>
 						</div>
@@ -173,7 +178,8 @@
 				<ul class="fh5co-social-icons">
 				  <li><a href="https://github.com/s6007541"><i class="icon-github2"></i></a></li>
 				  <li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
-				  <li><a href="https://www.facebook.com/sorn.chottananurak/"><i class="icon-facebook2"></i></a></li>
+				  <li><a href="mailto: sorn111930@gmail.com"><i class="icon-mail"></i></a></li>
+				  <li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
 				</ul>
 			  </div>
 			</div>
