--- a/index.html
+++ b/index.html
@@ -86,9 +86,6 @@
 									<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="mailto: sorn111930@gmail.com"><i class="fas fa-envelope"></i></a></li>	
 									<li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
-									
-					
-
 								</ul>
 							</p>
 						</div>
@@ -164,24 +161,24 @@
 			  <ul class="info">
 				<span class="firstname">Sorn</span><br/><span class="lastname">Chottananurak</span>
 			  </ul>
+				<!-- Social Media Icons -->
+				<div class="social-2">
+					<ul class="fh5co-social-icons">
+						<li><a href="https://github.com/s6007541"><i class="icon-github2"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
+						<li><a href="mailto: sorn111930@gmail.com"><i class="icon-mail"></i></a></li>
+						<li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
+					</ul>
+				</div>
 			</div>
 	  
 			<!-- Right Section (About Me Description) -->
 			<div class="col-md-8">
-			  <h3>Hello There!</h3>
+			  <h3><br/>Hello There!</h3>
 			  <p>I am a fourth-year undergraduate student double majoring in Electrical Engineering and Computer Science at the Korea Advanced Institute of Science & Technology (KAIST). My research and professional interests span across <strong>machine learning</strong>, <strong>domain adaptation</strong>, <strong>personalized AI</strong>, and <strong>topics beyond supervised learning (semi-supervised learning, self-supervised learning, and unsupervised learning)</strong>.</p>
 			  <p>As an active researcher, I am working on innovative projects related to state-of-the-art technology in machine learning. Currently, I am exploring new opportunities that align with my passion and expertise.</p>
 			  <p>Feel free to check out my <a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing" style="color:rgb(255, 229, 168)">Resume!</a></p>
 	  
-			  <!-- Social Media Icons -->
-			  <div>
-				<ul class="fh5co-social-icons">
-				  <li><a href="https://github.com/s6007541"><i class="icon-github2"></i></a></li>
-				  <li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
-				  <li><a href="mailto: sorn111930@gmail.com"><i class="icon-mail"></i></a></li>
-				  <li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
-				</ul>
-			  </div>
 			</div>
 		  </div>
 		</div>
