--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<h1><span>Sorn Chottananurak</span></h1>
 							<h2><span>Machine Learning Researcher / Data Scientist</span></h2>
 							<p>
-								<ul class="fh5co-social-icons">
+								<ul id="social-1" class="fh5co-social-icons">
 									<li><a href="https://github.com/s6007541"><i class="fab fa-github"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="mailto: sorn111930@gmail.com"><i class="fas fa-envelope"></i></a></li>	
@@ -162,14 +162,12 @@
 				<span class="firstname">Sorn</span><br/><span class="lastname">Chottananurak</span>
 			  </ul>
 				<!-- Social Media Icons -->
-				<div class="social-2">
-					<ul class="fh5co-social-icons">
-						<li><a href="https://github.com/s6007541"><i class="icon-github2"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
-						<li><a href="mailto: sorn111930@gmail.com"><i class="icon-mail"></i></a></li>
-						<li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
-					</ul>
-				</div>
+				<ul id="social-2" class="fh5co-social-icons">
+					<li><a href="https://github.com/s6007541"><i class="icon-github2"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
+					<li><a href="mailto: sorn111930@gmail.com"><i class="icon-mail"></i></a></li>
+					<li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
+				</ul>
 			</div>
 	  
 			<!-- Right Section (About Me Description) -->
