--- a/index.html
+++ b/index.html
@@ -347,9 +347,12 @@
 			<div class="row">
 				<!-- Project 1 -->
 				<div class="col-md-4 text-center col-padding">
-					<a href="https://github.com/s6007541/AdaDQN" class="work project-box" style="background-image: url(images/AdaDQN.gif);">
+					<div class="work project-box" style="background-image: url(images/AdaDQN.gif);">
 						<div class="desc">
 							<h3>AdaDQN</h3>
+							<a href="https://github.com/s6007541/AdaDQN" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
 							<p class="project-description">Adaptive Deep Q-Learning: Enhancing Performance of Deep Q-Networks in the Face of Covariate Shift</p>
 							<div class="keywords">
 								<span class="keyword-btn">Reinforcement Learning</span>
@@ -357,13 +360,16 @@
 								<span class="keyword-btn">Atari Game</span>
 							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 				<!-- Project 2 -->
 				<div class="col-md-4 text-center col-padding">
-					<a href="https://github.com/s6007541/EvolveUniTest" class="work project-box" style="background-image: url(images/EvolveUniTest.png);">
+					<div class="work project-box" style="background-image: url(images/EvolveUniTest.png);">
 						<div class="desc">
 							<h3>EvolveUniTest</h3>
+							<a href="https://github.com/s6007541/EvolveUniTest" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
 							<p class="project-description">Evolving Prompt with Genetic Algorithm Yields Powerful Instruction for Unit Test Generation</p>
 							<div class="keywords">
 								<span class="keyword-btn">Unit Testing</span>
@@ -372,13 +378,16 @@
 								<span class="keyword-btn">LLM</span>
 							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 				<!-- Project 3 -->
 				<div class="col-md-4 text-center col-padding">
-					<a href="https://github.com/s6007541/PSKD-ML" class="work project-box" style="background-image: url(images/PSKD_ML.png);">
+					<div class="work project-box" style="background-image: url(images/PSKD_ML.png);">
 						<div class="desc">
 							<h3>PSKD-ML</h3>
+							<a href="https://github.com/s6007541/PSKD-ML" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
 							<p class="project-description">Progressive Self-Knowledge Distillation with Mutual Learning</p>
 							<div class="keywords">
 								<span class="keyword-btn">Knowledge Distillation</span>
@@ -386,15 +395,18 @@
 								<span class="keyword-btn">Deep Learning</span>
 							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 			</div>
 			<div class="row">
 				<!-- Project 4 -->
 				<div class="col-md-4 text-center col-padding">
-					<a href="https://github.com/s6007541/OECT" class="work project-box" style="background-image: url(images/OECT.png);">
+					<div class="work project-box" style="background-image: url(images/OECT.png);">
 						<div class="desc">
 							<h3>OECT</h3>
+							<a href="https://github.com/s6007541/OECT" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
 							<p class="project-description">Optimized-Embedded Cluster & Tune: Boost Cold Start Performance in Text Classification</p>
 							<div class="keywords">
 								<span class="keyword-btn">LLM</span>
@@ -403,13 +415,16 @@
 								<span class="keyword-btn">Unsupervised Learning</span>
 							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 				<!-- Project 5 -->
 				<div class="col-md-4 text-center col-padding">
-					<a href="https://github.com/s6007541/OceanSpace" class="work project-box" style="background-image: url(images/oceanspace.png);">
+					<div class="work project-box" style="background-image: url(images/oceanspace.png);">
 						<div class="desc">
 							<h3>OceanSpace</h3>
+							<a href="https://github.com/s6007541/OceanSpace" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
 							<p class="project-description">LLM-based Personalized Digital Sanctuary for Stress Relief</p>
 							<div class="keywords">
 								<span class="keyword-btn">LLM</span>
@@ -419,12 +434,13 @@
 								<span class="keyword-btn">AI Sanctuary</span>
 							</div>
 						</div>
-					</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
+
 	<div id="fh5co-publication">
 		<div class="container">
 		  <div class="row">
@@ -568,6 +584,8 @@
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<script src="js/navbar.js"></script>
+
 
 	</body>
 </html>
