fix navbar size

--- a/index.html
+++ b/index.html
@@ -41,33 +41,23 @@
 	<body>
 
     <!-- Navigation Bar -->
-    <div class="navbar">
-        <div class="navbar-content">
-			<!-- Dropdown Button -->
-            <div class="dropdown">
-                <button class="dropdown-btn"><i class="fas fa-bars"></i></button>
-                <div class="dropdown-content">
-					<a href="#fh5co-about">About Me</a>
-					<a href="#fh5co-resume">Experience</a>
-					<a href="#fh5co-work">Academic Projects</a>
-					<a href="#fh5co-publication">Publications</a>
-					<a href="#fh5co-awards">Awards</a>
-					<a href="#fh5co-contact">Contact Me</a>
-					<a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing">Resume</a>
-                </div>
-            </div>
+    <div class="sorn-navbar">
+		<div class="sorn-dropdown">
+			<button class="sorn-dropdown-btn"><i class="fas fa-bars"></i></button>
+			<div class="sorn-dropdown-content">
+				<a href="#fh5co-about">About Me</a>
+				<a href="#fh5co-resume">Experience</a>
+				<a href="#fh5co-work">Academic Projects</a>
+				<a href="#fh5co-publication">Publications</a>
+				<a href="#fh5co-awards">Awards</a>
+				<a href="#fh5co-contact">Contact Me</a>
+				<a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing">Resume</a>
+			</div>
+		</div>
 
-            <!-- Your Name in the Center -->
-            <div class="name">Sorn Chottananurak</div>
-			
-			
-			<div class="spacenav">&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</div>
-
+		<div class="name">Sorn Chottananurak</div>
             
-        </div>
     </div>
-
-	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
 	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_4.jpg);" data-stellar-background-ratio="0.5">
