--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
-						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
+						<div id="first-page-content" class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/Sorn.jpg);"></div>
 							<h1><span>Sorn Chottananurak</span></h1>
 							<h2><span>Machine Learning Researcher / Data Scientist</span></h2>
