--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<p>
 								<ul id="social-1" class="fh5co-social-icons">
 									<li><a href="https://github.com/s6007541"><i class="fab fa-github"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="fab fa-linkedin"></i></a></li>
 									<li><a href="mailto: sorn111930@gmail.com"><i class="fas fa-envelope"></i></a></li>	
 									<li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
 								</ul>
@@ -153,10 +153,10 @@
 			  </ul>
 				<!-- Social Media Icons -->
 				<ul id="social-2" class="fh5co-social-icons">
-					<li><a href="https://github.com/s6007541"><i class="icon-github2"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="icon-linkedin2"></i></a></li>
-					<li><a href="mailto: sorn111930@gmail.com"><i class="icon-mail"></i></a></li>
-					<li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>	
+					<li><a href="https://github.com/s6007541"><i class="fab fa-github"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/sornchottananurak/"><i class="fab fa-linkedin"></i></a></li>
+					<li><a href="mailto: sorn111930@gmail.com"><i class="fas fa-envelope"></i></a></li>	
+					<li><a href="https://scholar.google.com/citations?user=WgaIo5QAAAAJ&hl=en"><i class="material-icons">school</i></a></li>
 				</ul>
 			</div>
 	  
