--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 	<meta name="twitter:card" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" >
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- Animate.css -->
@@ -165,7 +164,7 @@
 			  <h3><br/>Hello There!</h3>
 			  <p>I am a fourth-year undergraduate student double majoring in Electrical Engineering and Computer Science at the Korea Advanced Institute of Science & Technology (KAIST). My research and professional interests span across <strong>machine learning</strong>, <strong>domain adaptation</strong>, <strong>personalized AI</strong>, and <strong>topics beyond supervised learning (semi-supervised learning, self-supervised learning, and unsupervised learning)</strong>.</p>
 			  <p>As an active researcher, I am working on innovative projects related to state-of-the-art technology in machine learning. Currently, I am exploring new opportunities that align with my passion and expertise.</p>
-			  <p>Feel free to check out my <a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing" style="color:rgb(255, 229, 168)">Resume!</a></p>
+			  <p>Feel free to check out my <a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing">Resume!</a></p>
 	  
 			</div>
 		  </div>
