add dumbs project

--- a/index.html
+++ b/index.html
@@ -425,6 +425,26 @@
 						</div>
 					</div>
 				</div>
+				<!-- Project 6 -->
+				<div class="col-md-4 text-center col-padding">
+					<div class="work project-box" style="background-image: url(images/dumbs.png);">
+						<div class="desc">
+							<h3>DUMBS</h3>
+							<a href="https://github.com/s6007541/DUMBS" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
+							<p class="project-description">Dynamic Uncertainty Minimization with Adaptive Batch Normalization Statistic for Graph Neural Networks</p>
+							<div class="keywords">
+								<span class="keyword-btn">Graph</span>
+								<span class="keyword-btn">Node Classification</span>
+								<span class="keyword-btn">Domain Adaptation</span>
+								<span class="keyword-btn">GNN</span>
+								
+								
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
